SET( LIB_NAME osgwControls )

ADD_DEFINITIONS( -DOSGWCONTROLS_LIBRARY )
SET( HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${LIB_NAME} )

SET( LIB_PUBLIC_HEADERS
    ${HEADER_PATH}/SliderControl.h
    ${HEADER_PATH}/Export.h
)

ADD_SHARED_LIBRARY_INTERNAL( ${LIB_NAME}
    ${LIB_PUBLIC_HEADERS}
    SliderControl.cpp
)

TARGET_LINK_LIBRARIES(
    ${LIB_NAME}
    ${OSG_LIBRARIES}
)

INCLUDE(ModuleInstall OPTIONAL)
